--- a/client/styles/signup.module.scss
+++ b/client/styles/signup.module.scss
@@ -20,8 +20,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.5);
-  padding: 6rem;
+  padding: 4rem 6rem 3rem 6rem;
+  padding-bottom: 3rem;
   @include respond(tab-port) {
     padding: 4rem;
   }
