--- a/client/styles/_mixins.scss
+++ b/client/styles/_mixins.scss
@@ -10,7 +10,12 @@
     }
   }
   @if $breakpoint == tab-land {
-    @media (min-width: 75em) {
+    @media (max-width: 70em) {
+      @content;
+    }
+  }
+  @if $breakpoint == small-desktop {
+    @media (max-width: 100em) {
       @content;
     }
   }
