--- a/client/styles/feed.module.scss
+++ b/client/styles/feed.module.scss
@@ -1,5 +1,6 @@
 .base {
   height: 100vh;
   flex-grow: 1;
-  background-color: aquamarine;
+  background-color: rgb(248, 240, 227);
+  padding: 2rem;
 }
