--- a/client/styles/home.module.scss
+++ b/client/styles/home.module.scss
@@ -1,3 +1,8 @@
+@import "_mixins";
+@import "_typography";
 .layout {
   display: flex;
+  @include respond(phone) {
+    flex-direction: column;
+  }
 }
