--- a/client/styles/navbar.module.scss
+++ b/client/styles/navbar.module.scss
@@ -3,14 +3,14 @@
 
 .base {
   height: 100vh;
-  width: 18vw;
+  width: 25vw;
   background-color: rgb(245, 245, 245);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   padding: 2rem 0 2rem 0;
-  @include respond(tab-port) {
+  @include respond(phone) {
     display: none;
   }
 }
@@ -30,6 +30,7 @@
   @include respond(tab-land) {
     font-size: 1rem;
     margin-left: 0.75rem;
+    display: none;
   }
 }
 .sidebarLogo {
