--- a/client/styles/sidebar.module.scss
+++ b/client/styles/sidebar.module.scss
@@ -2,8 +2,9 @@
 @import "_typography";
 .base {
   height: 100vh;
+  width: 25vw;
   background-color: rgb(245, 245, 245);
-  padding: 2.8rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
