--- a/client/styles/feed.module.scss
+++ b/client/styles/feed.module.scss
@@ -1,6 +1,11 @@
+@import "_mixins";
+
 .base {
   height: 100vh;
   flex-grow: 1;
   background-color: rgb(248, 240, 227);
   padding: 2rem;
+  @include respond(phone) {
+    padding: 1rem;
+  }
 }
