feat:scroll bug fixed

--- a/client/styles/feed.module.scss
+++ b/client/styles/feed.module.scss
@@ -8,4 +8,12 @@
   @include respond(phone) {
     padding: 1rem;
   }
+  overflow: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
+}
+
+.base::-webkit-scrollbar {
+  display: none;
 }
