--- a/client/styles/feedcontent.module.scss
+++ b/client/styles/feedcontent.module.scss
@@ -46,4 +46,43 @@
 }
 .votes {
   // margin: 1rem;
+  font-size: 1.2rem;
+}
+
+.pseudoBtn {
+  all: unset;
+  cursor: pointer;
+}
+
+.pseudoBtnUpvote {
+  all: unset;
+  cursor: pointer;
+  background-color: lightgreen;
+  padding: 0.25rem;
+  border-radius: 0.4rem;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  pointer-events: none;
+}
+
+.pseudoBtnDownvote {
+  all: unset;
+  cursor: pointer;
+  background-color: orangered;
+  padding: 0.25rem;
+  border-radius: 0.4rem;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  pointer-events: none;
+}
+
+.pseudoBtnCaw {
+  all: unset;
+  cursor: pointer;
+  background-color: aquamarine;
+  padding: 0.25rem;
+  border-radius: 0.4rem;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  pointer-events: none;
 }
