--- a/client/styles/feedcontent.module.scss
+++ b/client/styles/feedcontent.module.scss
@@ -13,6 +13,9 @@
   border-radius: 0.8rem;
   padding: 1.5rem;
   margin: 1.5rem;
+  @include respond(phone) {
+    margin: 0.25rem;
+  }
 }
 
 .profile {
