--- a/client/styles/userprofile.module.scss
+++ b/client/styles/userprofile.module.scss
@@ -7,8 +7,6 @@
   @include respond(tab-port) {
     max-width: 100vw;
   }
-
-  background-color: rgba(245, 245, 245, 0.5);
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 0.8rem;
   padding: 1.5rem;
@@ -18,23 +16,17 @@
   }
   display: flex;
   justify-content: space-between;
-}
-
-.details {
-  align-self: flex-end;
-}
-
-.editBtns {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  backdrop-filter: blur(5px);
 }
 
 .editBtn {
-  height: 2.2rem;
-  width: 2.2rem;
+  height: 2.5rem;
+  width: 2.5rem;
+}
+.editBtn button {
+  all: unset;
 }
 
 .Btn {
+  margin: 0.8rem 0 0 0;
 }
