--- a/client/styles/feed.module.scss
+++ b/client/styles/feed.module.scss
@@ -3,7 +3,7 @@
 .base {
   height: 100vh;
   flex-grow: 1;
-  background-color: rgb(248, 240, 227);
+  background-color: #000814;
   padding: 2rem;
   @include respond(phone) {
     padding: 0.5rem;
