--- a/client/styles/signup.module.scss
+++ b/client/styles/signup.module.scss
@@ -1,7 +1,7 @@
 @import "_mixins";
 @import "_typography";
 .base {
-  background: orange;
+  background: #3d405b;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -19,9 +19,8 @@
 .box {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 4rem 6rem 3rem 6rem;
   padding-bottom: 3rem;
   @include respond(tab-port) {
