--- a/client/styles/createPost.module.scss
+++ b/client/styles/createPost.module.scss
@@ -1,7 +1,7 @@
 @import "_mixins";
 @import "_typography";
 .base {
-  background-color: #1d3557;
+  background-color: #3d405b;
   border-radius: 1rem;
   padding: 1rem;
   display: flex;
