--- a/client/styles/feedcontent.module.scss
+++ b/client/styles/feedcontent.module.scss
@@ -8,7 +8,7 @@
     max-width: 100vw;
   }
 
-  background-color: rgb(245, 245, 245);
+  background-color: #3d405b;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 0.8rem;
   padding: 1.5rem;
