--- a/client/styles/sidebar.module.scss
+++ b/client/styles/sidebar.module.scss
@@ -3,7 +3,7 @@
 .base {
   height: 100vh;
   width: 25vw;
-  background-color: #1d3557;
+  background-color: #3d405b;
   padding: 1rem;
   display: flex;
   flex-direction: column;
